--- a/Meteor Game/.project
+++ b/Meteor Game/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Munjena Kotska</name>
+	<name>Meteor Game</name>
 	<comment></comment>
 	<projects>
 	</projects>
